kubernetes/bd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: bd
  name: bd
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bd
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/trilhamusical_trilhamusical-net: "true"
        io.kompose.service: bd
    spec:
      containers:
        - args:
            - postgres
            - -c
            - config_file=/etc/postgresql/postgresql.conf
          image: gcr.io/lucid-arch-310121/trilhamusical-bd
          name: trilhamusical-bd
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
