kubernetes/servico-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: servico
  name: servico
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: servico
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/trilhamusical_trilhamusical-net: "true"
        io.kompose.service: servico
    spec:
      containers:
        - image: gcr.io/lucid-arch-310121/trilhamusical-servico
          name: trilhamusical-servico
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
