kubernetes/bd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: bd
  name: bd
spec:
  ports:
    - name: "5434"
      port: 5434
      targetPort: 5432
  selector:
    io.kompose.service: bd
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 35.230.25.18
