kubernetes/cliente-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: cliente
  name: cliente
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: cliente
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 35.230.46.203
