kubernetes/trilhamusical_trilhamusical-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: trilhamusical_trilhamusical_net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/trilhamusical_trilhamusical_net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/trilhamusical_trilhamusical_net: "true"
